# ossa

./: .gitignore  .gitreview  .zuul.yaml  OSSA-2011-001.json  OSSA-2011-001.yaml  OSSA-2012-001.json  OSSA-2012-001.yaml  OSSA-2012-002.json  OSSA-2012-002.yaml  OSSA-2012-003.json  OSSA-2012-003.yaml  OSSA-2012-004.json  OSSA-2012-004.yaml  OSSA-2012-005.json  OSSA-2012-005.yaml  OSSA-2012-006.json  OSSA-2012-006.yaml  OSSA-2012-007.json  OSSA-2012-007.yaml  OSSA-2012-008.json  OSSA-2012-008.yaml  OSSA-2012-009.json  OSSA-2012-009.yaml  OSSA-2012-010.json  OSSA-2012-010.yaml  OSSA-2012-011.json  OSSA-2012-011.yaml  OSSA-2012-012.json  OSSA-2012-012.yaml  OSSA-2012-013.json  OSSA-2012-013.yaml  OSSA-2012-014.json  OSSA-2012-014.yaml  OSSA-2012-015.json  OSSA-2012-015.yaml  OSSA-2012-016.json  OSSA-2012-016.yaml  OSSA-2012-017.json  OSSA-2012-017.yaml  OSSA-2012-018.json  (+146 more)
docs/: Makefile  README.md  generate.sh  requirements.txt  yaml2rst.py
ossa/: OSSA-2011-001.yaml  OSSA-2012-001.yaml  OSSA-2012-002.yaml  OSSA-2012-008.yaml  OSSA-2012-010.yaml  OSSA-2012-012.yaml  OSSA-2012-013.yaml  OSSA-2012-017.yaml  OSSA-2012-019.yaml  OSSA-2013-001.yaml  OSSA-2013-005.yaml  OSSA-2013-007.yaml  OSSA-2013-008.yaml  OSSA-2013-010.yaml  OSSA-2013-011.yaml  OSSA-2013-015.yaml  OSSA-2013-017.yaml  OSSA-2013-018.yaml  OSSA-2013-019.yaml  OSSA-2013-020.yaml  OSSA-2013-021.yaml  OSSA-2013-022.yaml  OSSA-2013-023.yaml  OSSA-2013-027.yaml  OSSA-2013-029.yaml  OSSA-2013-034.yaml  OSSA-2014-006.yaml  OSSA-2014-007.yaml  OSSA-2014-009.yaml  OSSA-2014-017.yaml  OSSA-2014-018.yaml  (+101 more)
(+29 files in other folders)
