[metadata]
name = openstack-security-advisories
version = 2014.2
summary = OpenStack Security Advisories
description-file =
    README.rst
author = OpenStack Vulnerability Management Team
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = False
